--- a/ReadMe
+++ b/ReadMe
@@ -61,6 +61,8 @@ LIST ALL COURSE SESSION
 curl -v localhost:8080/coursesession
 
 
+---USER
+curl -X POST localhost:8080/new-user -H 'Content-type:application/json' -d '{"firstName": "Edd","lastName": "Louis","email": "teacher@gmail.com","password" : "pass"}'
 
 
 How can I kill whatever process is using port 8080 
